[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Xolonium-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Main.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 360 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 7.0
margin_right = 1279.0
margin_bottom = 727.0
custom_fonts/font = SubResource( 3 )
text = "0
"
align = 1

[node name="GameOver" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 80.0
margin_right = 1279.0
margin_bottom = 800.0
custom_fonts/font = SubResource( 3 )
text = "Game Over"
align = 1
valign = 1

[node name="StartLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -70.0
margin_right = 1278.0
margin_bottom = 650.0
custom_fonts/font = SubResource( 3 )
text = "Choose Your Difficulty"
align = 1
valign = 1

[node name="Paddle" parent="." instance=ExtResource( 2 )]
position = Vector2( 497, 627 )
collision_layer = 0
collision_mask = 5

[node name="Ball" parent="." instance=ExtResource( 1 )]
position = Vector2( 638, 74 )
collision_layer = 4
collision_mask = 3

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2( 640, 0 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
shape = SubResource( 1 )

[node name="BottomWall" type="Area2D" parent="."]
position = Vector2( 640, 720 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource( 1 )

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 360 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 2 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 360 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 1280, 0 )
shape = SubResource( 2 )

[node name="ButtonEasy" type="Button" parent="."]
margin_left = 408.0
margin_top = 143.0
margin_right = 528.0
margin_bottom = 183.0
text = "Easy"

[node name="EasyStart" type="Button" parent="."]
margin_left = 575.0
margin_top = 198.0
margin_right = 695.0
margin_bottom = 238.0
text = "Start"

[node name="ButtonMedium" type="Button" parent="."]
margin_left = 573.0
margin_top = 142.0
margin_right = 693.0
margin_bottom = 182.0
text = "Medium"

[node name="ButtonMedium2" type="Button" parent="."]
margin_left = 574.0
margin_top = 197.0
margin_right = 694.0
margin_bottom = 237.0
text = "Start"

[node name="ButtonHard" type="Button" parent="."]
margin_left = 742.0
margin_top = 141.0
margin_right = 862.0
margin_bottom = 181.0
text = "Hard"

[node name="ButtonHard2" type="Button" parent="."]
margin_left = 574.0
margin_top = 198.0
margin_right = 694.0
margin_bottom = 238.0
text = "Start"

[connection signal="body_entered" from="BottomWall" to="." method="_on_BottomWall_body_entered"]
[connection signal="pressed" from="ButtonEasy" to="." method="_on_ButtonEasy_pressed"]
[connection signal="pressed" from="EasyStart" to="." method="_on_EasyStart_pressed"]
[connection signal="pressed" from="ButtonMedium" to="." method="_on_ButtonMedium_pressed"]
[connection signal="pressed" from="ButtonMedium2" to="." method="_on_ButtonMedium2_pressed"]
[connection signal="pressed" from="ButtonHard" to="." method="_on_ButtonHard_pressed"]
[connection signal="pressed" from="ButtonHard2" to="." method="_on_ButtonHard2_pressed"]
